<resources>
    <string name="app_name">Tsundoku</string>
    <string name="library">Library</string>
    <string name="updates">Updates</string>
    <string name="search">Search</string>
    <string name="history">History</string>
    <string name="settings">Settings</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login">Login</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="contact_us">Contact Us</string>
    <string name="log_out">Log Out</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="cover">Cover</string>
    <string name="textview">TextView</string>
    <string name="chaptername">TextView</string>
    <string name="lorem_ipsum">Lorem Ipsum</string>
    <string name="search_library">Search Library</string>
    <string name="library_sort">Library sort</string>
    <string name="refresh_library">Refresh Library</string>
    <string name="clear">Clear</string>
    <string name="refresh_feed">Refresh Feed</string>
    <string name="imageview">ImageView</string>
    <string name="textview1">TextView</string>
    <string name="MaterialButton">Button</string>
    <string name="resume">Resume</string>
    <string name="search4">Search</string>
    <string name="profile_picture" />
    <string name="post_options_button" />
    <string name="post_title" />
    <string name="post_description" />
    <string name="bookmark_button" />
    <string name="updoot_button" />
    <string name="downvote_button" />
    <string name="next_chapter" />
    <string name="previous_chapter" />
    <string name="goes_back" />
    <string name="button_to_resume_chapter">Button to Resume chapter</string>
    <string name="email">Email</string>
    <string name="likes">Likes</string>
    <string name="bookmarks">Bookmarks</string>
    <string name="posts">Posts</string>
    <string name="format">Format</string>
    <string name="genre">Genre</string>
    <string name="theme">Theme</string>
    <string name="sign_in_to_see_profile">Sign In to See Profile</string>
    <string name="or_sign_up">Or Sign Up</string>
    <string name="forgot_pass"><u>Forgot Password?</u></string>
    <string name="str_sign_up"><u>Sign up</u></string>
    <string name="community" />
    <string name="profile" />
    <string name="community1">Community</string>
    <string name="profile1">Profile</string>
    <string name="new_to_tsundoku">New to Tsundoku?</string>
    <string name="logo">logo</string>
    <string name="username_email">Username/Email</string>

</resources>