<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout2"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/materialCardView"
        android:layout_width="0dp"
        android:layout_height="98dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/mangaNameTextView"
                android:layout_width="163dp"
                android:layout_height="35dp"
                android:text="@string/textview1"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.067"
                app:layout_constraintStart_toEndOf="@+id/mangaHistoryImageView"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.202" />

            <ImageView
                android:id="@+id/mangaHistoryImageView"
                android:layout_width="88dp"
                android:layout_height="wrap_content"
                android:contentDescription="@string/imageview"
                android:paddingHorizontal="5dp"
                android:paddingVertical="5dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0"
                app:srcCompat="@drawable/ginnosaji" />

            <TextView
                android:id="@+id/chapterIDTextView"
                android:layout_width="86dp"
                android:layout_height="20dp"
                android:layout_marginStart="11dp"
                android:layout_marginTop="3dp"
                android:text="TextView"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toEndOf="@+id/mangaHistoryImageView"
                app:layout_constraintTop_toBottomOf="@+id/mangaNameTextView"
                app:layout_constraintVertical_bias="0.428" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/resumeChapterButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/resume"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.68"
                app:layout_constraintStart_toEndOf="@+id/mangaNameTextView"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>
</androidx.constraintlayout.widget.ConstraintLayout>